# ML-new-project

./: README.md.txt  Requirements.txt  setup.py
ML project/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
ML project/.github/: ISSUE_TEMPLATE.md
ML project/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ML project/src/thiss_is_the_basic_end_to_end_ml_project_tutorial/: __init__.py  cli.py
ML project/tests/: __init__.py  test_thiss_is_the_basic_end_to_end_ml_project_tutorial.py
