[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thiss_is_the_basic_end_to_end_ml_project_tutorial"
version = "0.0.1"
description = "this is the basic end to end ml project"
readme = "README.rst"
authors = [
  {name = "Brijesh Singh", email = "darebrij@gmail.com"}
]
maintainers = [
  {name = "Brijesh Singh", email = "darebrij@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Brijesh-star/thiss_is_the_basic_end_to_end_ml_project_tutorial/issues"
changelog = "https://github.com/Brijesh-star/thiss_is_the_basic_end_to_end_ml_project_tutorial/blob/master/changelog.md"
homepage = "https://github.com/Brijesh-star/thiss_is_the_basic_end_to_end_ml_project_tutorial"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

